--- a/template.08/index.html
+++ b/template.08/index.html
@@ -8,20 +8,23 @@
 
         <link rel="stylesheet" href="./styles.css">
     </head>
+
     <body>
-        <div class="main">  
+        <div class="main">
             <header class="header">CABEÇALHO</header>
+
             <div class="split">
-                <navbar class="menu-lateral">
+                <aside class="menu-lateral">
                     <h1>MENU LATERAL</h1>
-                </navbar>
-    
+                </aside>
+
                 <section class="content">
                     <h1>CONTEÚDO</h1>
+
                     <main class="container">CONTAINER</main>
                 </section>
             </div>
-            
+
             <footer class="footer">RODAPÉ</footer>
         </div>
     </body>
