--- a/template.04/index.html
+++ b/template.04/index.html
@@ -24,10 +24,10 @@
 
 
 
-.content h1 {
+<!-- .content h1 {
     align-items: center;
     justify-content: center;
     font-size: 24px;
     font-family: sans-serif;
     font-weight: 700;
-}
+} -->
